[package]
name = "leaktor"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Resch <reschjonas>"]
description = "A blazingly fast secrets scanner with validation capabilities"
license = "MIT"
repository = "https://github.com/reschjonas/leaktor"
homepage = "https://github.com/reschjonas/leaktor"
documentation = "https://github.com/reschjonas/leaktor#readme"
readme = "README.md"
keywords = ["security", "secrets", "scanner", "pentesting", "credentials"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"
exclude = [
    ".github/",
    ".git/",
    "target/",
    "*.md",
    "!README.md",
]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"
indicatif = "0.17"

# Pattern matching and text processing
regex = "1.11"
lazy_static = "1.5"

# Git operations
git2 = "0.19"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Async runtime and HTTP
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# File handling
ignore = "0.4"
walkdir = "2.5"

# Parallel processing
rayon = "1.10"

# Utilities
base64 = "0.22"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# Entropy calculation
entropy = "0.4"

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"

[[bin]]
name = "leaktor"
path = "src/main.rs"
