[package]
name = "leaktor"
version = "0.4.1"
edition = "2021"
authors = ["Jonas Resch <reschjonas>"]
description = "A secrets scanner with pattern matching, entropy analysis, and live validation"
license = "MIT"
repository = "https://github.com/reschjonas/leaktor"
homepage = "https://github.com/reschjonas/leaktor"
documentation = "https://github.com/reschjonas/leaktor#readme"
readme = "README.md"
keywords = ["security", "secrets", "scanner", "pentesting", "credentials"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"
exclude = [
    ".github/",
    ".git/",
    "target/",
    "*.md",
    "!README.md",
]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"
indicatif = "0.17"

# Pattern matching and text processing
regex = "1.11"
lazy_static = "1.5"

# Git operations (no SSH/HTTPS needed, local repo access only)
git2 = { version = "0.19", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Async runtime and HTTP
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Platform
libc = "0.2"

# File handling
ignore = "0.4"
walkdir = "2.5"
tar = "0.4"
flate2 = "1.0"

# Cloud & container sources
aws-config = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
bollard = { version = "0.18", optional = true }
futures-util = { version = "0.3", optional = true }

# Parallel processing
rayon = "1.10"

# Utilities
base64 = "0.22"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# Entropy calculation
entropy = "0.4"

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"

[features]
default = ["s3", "docker"]
s3 = ["dep:aws-config", "dep:aws-sdk-s3"]
docker = ["dep:bollard", "dep:futures-util"]

[[bin]]
name = "leaktor"
path = "src/main.rs"
